# bigchaindb-guix

./: .gitignore  Makefile.am  README  ROADMAP  activate  configure.ac  dir-locals.el  guix.scm  system.scm
bigchaindb-guix/deployment/: tendermint-init.scm
bigchaindb-guix/os/: node.scm  services.scm
bigchaindb-guix/services/: bigchaindb.scm  cloud-init.scm  mongodb.scm
bigchaindb-packages/: bigchaindb.scm  mongodb.scm  rust.scm  tendermint.scm
build-aux/: pre-inst-env.in
ci/: jobs.scm  node.scm
extensions/: Makefile.am  tendermint_genkey.c
tests/: cloud-init.scm  fixtures.scm  services.scm  system.scm  v1.json
